terraform/security_group.tf
# Create a security group for the EC2 instance
resource "aws_security_group" "my-app" {
  vpc_id      = aws_vpc.my-app.id
  name        = "${var.env}-${var.app_name}"
  description = "Allow PING and SSH access and open port 3000"
  tags = {
    Name = "${var.env}-${var.app_name}"
  }
  egress {
    from_port   = -0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.ALL_IP]
  }
  depends_on = [aws_vpc.my-app]
}

resource "aws_security_group_rule" "ssh" {
  type              = "ingress"
  to_port           = 22
  from_port         = 22
  protocol          = "tcp"
  cidr_blocks       = var.SSH_IPS
  security_group_id = aws_security_group.my-app.id
}

resource "aws_security_group_rule" "ping" {
  type              = "ingress"
  to_port           = 0
  from_port         = 8
  protocol          = "icmp"
  cidr_blocks       = var.SSH_IPS
  security_group_id = aws_security_group.my-app.id
}
# Dynamically create security group rules for each port in the OPEN_PORTS variable
resource "aws_security_group_rule" "my-app" {
  for_each = toset(var.OPEN_PORTS)

  type              = "ingress"
  to_port           = each.value
  from_port         = each.value
  protocol          = "tcp"
  cidr_blocks       = [var.ALL_IP]
  security_group_id = aws_security_group.my-app.id
  depends_on        = [aws_security_group.my-app]
}
